# cpp_craft_0314

solutions/igor_kolupaev/tpp/: _msvc_gen_2013_64.bat
solutions/igor_kolupaev/tpp/sources/market_data_receiver/: CMakeLists.txt  main.cpp
solutions/igor_kolupaev/tpp/sources/multicast_communication/: cqs_structures.h  fconfigurator.h  market_data_processor.h  market_message_header.h  quote_message.h  quote_processor.h  trade_message.cpp  trade_processor.cpp  trade_processor.h
solutions/igor_kolupaev/tpp/tests/multicast_communication_tests/: multicast_communicator_tests.cpp  multicast_configurator_tests.cpp  test_registrator.cpp  trade_message_tests.cpp  udp_listener_tests.cpp
solutions/igor_kolupaev/trade_processor_project/sources/multicast_communication/: configurator.h  cta_ports_vector.h  cts_structures.h  fconfigurator.cpp  fconfigurator.h  message_processor.h  multicast_communicator.cpp  multicast_communicator.h  quote_message.cpp  quote_processor.cpp  quote_processor.h  trade_message.h  udp_listener.cpp  udp_listener.h
solutions/igor_kolupaev/trade_processor_project/tests/multicast_communication_tests/: processors_tests.cpp  quote_message_tests.cpp  test_registrator.h
